@@ -3,6 +3,7 @@ TODO: Testing, testing ..
 
 V RF.01.38.14.Mod (2018-01-15)
 - Testing FEATURE_SEE_DISPLAY which can steer the printers button via GCODE and show whats display in the menu.
+- improved display cache for output as serial string.
 
 V RF.01.38.13.Mod (2018-01-15)
 - Fix Fix Tyreus Lyben was never used but No Overshoot was.
